--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
 	<title>Savage Cabbage Bot</title>
-    <link rel="icon" href="./icon.jpg">
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="icon" href="../icon.jpg">
+    <link rel="stylesheet" href="../mystyle.css">
 	<meta charset="UTF-8">
 	<meta name="author" content="chocolatejade42">
 	<meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy">
@@ -10,13 +10,13 @@
 </head>
 <body>
 	<div class="navbar">
-		<img src="./icon.jpg" alt="icon" style="width:47.5px;height:47.5px">
+		<img src="../icon.jpg" alt="icon" style="width:47.5px;height:47.5px">
 		<a href="#home">Home</a>
 		<a href="#info">Info</a>
 		<a href="#cmds">Commands</a>
 		<a href="#stats">Stats</a>
 		<a href="#contact">Contact</a>
-		<a href="invite.html" target="_blank">Invite</a>
+		<a href="./invite.html" target="_blank">Invite</a>
 	</div>
 	<br>
 	
@@ -30,7 +30,7 @@
 	<p>First off, to suggest anything, the command <u>$suggest</u> may be used in a DM to the bot to suggest anything or notify me of some bugs</p>
 
 	<h1 id="stats">Stats</h1>
-	<p>Uptime stats and error logs can be viewed <a href="https://stats.uptimerobot.com/M1NrQcXJv/781037937" target="_blank">here</a> . This only shows stats from the last week though</p>
+	<p>Uptime stats and error logs can be viewed <a href="https://stats.uptimerobot.com/M1NrQcXJv/781037937" target="_blank">here</a>. This only shows stats from the last week though</p>
 	
 	<h1 id="contact">Contact</h1>
 
