Fix website, start interlinking html with python - Started adding commands to website - rename AttrDict 'cmds' to 'CMDS' - make 'CMD_CLASSES' adaptable list rather than normal list

--- a/static/styling.css
+++ b/static/styling.css
@@ -1,15 +1,30 @@
+/* Variables */
+:root {
+    --font: "Comic Sans MS", cursive, sans-serif;
+} /* font-family: "Courier New", Courier, "Lucida Sans Typewriter" */
+
+/* Main styling */
 h1 {
     color: #EAE0C7;
-    font-family: "Comic Sans MS", "cursive", "sans-serif";
+    font-family: var(--font);
     text-align: center;
     background-color: #013300
 } p {
     color: #EAE0C7;
-    font-family: "Comic Sans MS", "cursive", "sans-serif";
+    font-family: var(--font);
     size: 200px
 } body {
     background-color: #01A300
-} .navbar {
+} ul {
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    font-family: var(--font);
+    color: #EAE0C7;
+}
+
+/* Navbar styling */
+.navbar {
     background-color: #EAE0C7;
     position: fixed;
     top: 0;
@@ -20,7 +35,7 @@ h1 {
     float: left;
     display: block;
     color: #013300;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: var(--font);
     padding: 14px 16px;
     text-decoration: none
 } .navbar a:hover {
