Continue on website

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
 		<p>Uptime stats and error logs can be viewed <a href="https://stats.uptimerobot.com/M1NrQcXJv/781037937" target="_blank">here</a>. This only shows stats from the last week though</p>
 		
 		<h1 id="contact">Contact</h1>
-		<p>Contact the developer(s) by using the <u>$suggest</u> command <i>in a DM</i></p>
+		<p>Contact the developer(s) by using the <u>$suggest</u> command <i>in a DM</i> or join the support server:</p>
+		<a href="server-invite" target="_blank">Join Savage Cabbage's support server!</a>
 	</body>
 </html>
