--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Invite Savage Cabbage</title>
-        <meta http-equiv="refresh" content="1; URL=https://discordapp.com/oauth2/authorize?client_id=492873992982757406&scope=bot&permissions=201641024"/>
+        <title>{{title}}</title>
+        <meta http-equiv="refresh" content="1; URL={{redirect}}"/>
         <link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot">
     </head>
     <body>
         <h1>Redirecting</h1>
+        <p>You're being redirected to <a href="{{redirect}}">{{redirect}}</a></p>
     </body>
 </html>
