final changes before attempting to move to a supported version of async

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 		<br>
 		
 		<h1 id="home">Home</h1>
-		<p>Welcome to the official website for <b>Savage Cabbage#3666</b></p>
+		<p>Welcome to the official website for <b>Savage Cabbage#3666</b>. Here is a list of all the commands, as well as useful info and links</p>
 
 		<h1 id="info">Info</h1>
 		<p>Savage Cabbage was developed by <a href="https://github.com/aiden2480" target="_blank">chocolatejade42</a> and started development on the 22<sup>nd</sup> of September 2018. The last update was <b>{{run_time}}</b> AEST.</p>
