--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Savage Cabbage Bot</title>
-		<link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot">
+        <meta content="Savage Cabbage's Website" property="og:title"><meta content="The ultimate hub for info about the bot, stats, the entire list of commands and more!" property="og:description"><meta content="https://savage-cabbage.herokuapp.com/static/icon.jpg" property="og:image"><meta name="theme-color" content="#01A300">		
+		<link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div class="navbar">
