--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <meta http-equiv="refresh" content="1; URL={{redirect}}"/>
-        <link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot">
+        <meta http-equiv="refresh" content="2; URL={{redirect}}"/>
+        <meta content="{{embed_title}}" property="og:title"><meta content="{{embed_description}}" property="og:description"><meta content="https://savage-cabbage.herokuapp.com/static/icon.jpg" property="og:image"><meta name="theme-color" content="#01A300">
+        <link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot"><meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1>Redirecting</h1>
-        <p>You're being redirected to <a href="{{redirect}}">{{redirect}}</a></p>
+        <p>You're being redirected to <a href="{{redirect}}">{{redirect}}</a>. Yay! 🤗</p>
     </body>
 </html>
