Actually the final commit before rewrite

--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -3,7 +3,7 @@
     <head>
         <title>{{title}}</title>
         <meta http-equiv="refresh" content="2; URL={{redirect}}"/>
-        <meta content="{{embed_title}}" property="og:title"><meta content="{{embed_description}}" property="og:description"><meta content="https://savage-cabbage.herokuapp.com/static/icon.jpg" property="og:image"><meta name="theme-color" content="#01A300">
+        <meta content="{{embed_title}}" property="og:title"><meta content="{{embed_description}}" property="og:description"><meta content="{{website_homepage}}/static/icon.jpg" property="og:image"><meta name="theme-color" content="#01A300">
         <link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot"><meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
