--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
 			<img src="/static/icon.jpg" alt="icon" style="width:47.5px;height:47.5px">
 			<a href="#home">Home</a>
 			<a href="#info">Info</a>
-			<a href="#stats">Commands</a>
-			<a href="#cmds">Stats</a>
+			<a href="#stats">Stats</a>
+			<a href="#cmds">Commands</a>
 			<a href="#links">Links</a>
 			<a href="invite" target="_blank" style="float:right">Invite</a>
 			<a href="server-invite" target="_blank" style="float:right">Support Server</a>
@@ -21,7 +21,6 @@
 		<h1 id="home">Home</h1>
 		<p>Welcome to the official website for <b>Savage Cabbage#3666</b>. Here is a list of all the commands, as well as useful info and links</p>
 
-
 		<h1 id="info">Info</h1>
 		<p>Savage Cabbage was developed by <a href="https://github.com/aiden2480" target="_blank">chocolatejade42</a> and started development on the 22<sup>nd</sup> of September 2018. The last update was <b>{{run_time}}</b> AEST.</p>
 		<p>Use <u>$autoroast</u> in a channel that the bot has access in to get randomly generated quotes, such as this one: <b>{{choice_roast}}</b>.</p>
@@ -29,6 +28,7 @@
 
 		<h1 id="stats">Stats</h1>
 		<p>Uptime stats and error logs can be viewed <a href="https://stats.uptimerobot.com/M1NrQcXJv/781037937" target="_blank">here</a>. This only shows stats from the last week though. Update logs and changes can be viewed <a href="logs" target="_blank">here</a>.</p>
+		<p>The bot currently has <b>{{bot_stats[0]}}</b> users accross <b>{{bot_stats[1]}}</b> guilds</p>
 
 
 		<h1 id="cmds">Commands</h1>
