--- a/web/templates/logs.html
+++ b/web/templates/logs.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Savage Cabbage Update log</title>
-        <meta content="Savage Cabbage update logs" property="og:title"><meta content="Latest update: v{{last_update[0]}}: {{last_update[1]}}" property="og:description"><meta content="{{website_homepage}}/static/icon.jpg" property="og:image"><meta name="theme-color" content="#01A300">
+        <meta content="Savage Cabbage update logs" property="og:title"><meta content="Latest update: v{{last_update[0]}}: {{last_update[1]}}" property="og:description"><meta content="{{website_homepage}}/static/icon" property="og:image"><meta name="theme-color" content="#01A300">
         <link rel="icon" href="/static/icon.jpg"><link rel="stylesheet" type="text/css" href="/static/styling.css"><meta charset="UTF-8"><meta name="author" content="chocolatejade42"><meta name="keywords" content="Discord,SavageCabbage,Python,DiscordPy"><meta name="description" content="Savage Cabbage Discord Bot"><meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
