--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="navbar">
-			<img src="/static/icon.jpg" alt="icon" style="width:47.5px;height:47.5px">
+			<img src="/static/icon.jpg" href="/" alt="icon" style="width:47.5px;height:47.5px">
 			<a href="#home">Home</a>
 			<a href="#info">Info</a>
 			<a href="#stats">Stats</a>
