Finally add description to each of the command- classes. fix 404 styling made box 2px wider lol

--- a/web/templates/errors/404.html
+++ b/web/templates/errors/404.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>404, this page doesn't exist</title>
+        <title>[404] you didn't see anything</title>
         <link rel="icon" href="/static/icon.jpg">
         <style>
             body {background-color: rgb(1, 145, 1)}
-            .center-div {
+            .main-div {
                 position: absolute; margin: auto; overflow: auto;
                 top: 0; right: 0; bottom: 0; left: 0;
-                width: 525px; height: 165px;
+                width: 525px; height: 167px;
                 background-color: #01A300;
                 border-radius: 3px; text-align: center;
                 color: #EAE0C7; font-family: "Comic Sans MS", cursive, sans-serif}
         </style>
+        <meta content="Savage Cabbage's Website" property="og:title"><meta content="[404] What are you doing? This page doesn't even exist lol" property="og:description"><meta content="{{website_homepage}}/static/icon" property="og:image"><meta name="theme-color" content="#01A300">		
     </head>
     <body>
-        <div class="center-div">
+        <div class="main-div">
             <p style="float: left" ><img src="/static/icon.jpg" alt="icon" style="width:130px;height:130px"></p>
             <h2>[404] What are you doing?<h3>this page doesn't even exist lol</h3></h2>
             <p>Click <a href="/">here</a> to return home</p>
