Create license, fix readme

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,6 +13,7 @@
 			<a href="#stats">Stats</a>
 			<a href="#cmds">Commands</a>
 			<a href="#links">Links</a>
+
 			<a href="invite" target="_blank" style="float:right">Invite</a>
 			<a href="server-invite" target="_blank" style="float:right">Support Server</a>
 		</div><br>
@@ -23,13 +24,17 @@
 
 		<h1 id="info">Info</h1>
 		<p>Savage Cabbage was developed by <a href="https://github.com/aiden2480" target="_blank">chocolatejade42</a> and started development on the 22<sup>nd</sup> of September 2018. The last update was <b>{{run_time}}</b> AEST.</p>
-		<!--<p>Use <u>$autoroast</u> in a channel that the bot has access in to get randomly generated quotes, such as this one: <b>{{choice_roast}}</b></p>-->
 		
-
 		<h1 id="stats">Stats</h1>
 		<p>Uptime stats and error logs can be viewed <a href="https://stats.uptimerobot.com/M1NrQcXJv/781037937" target="_blank">here</a>. This only shows stats from the last week though. Update logs and changes can be viewed <a href="logs" target="_blank">here</a>.</p>
 		<!--<p>The bot currently has <b>bot_stats[0]</b> users accross <b>bot_stats[1]</b> guilds</p>-->
-
+		<a href="https://discordbotlist.com/bots/492873992982757406">
+			<img 
+				width="285" 
+				height="105"
+				src="https://discordbotlist.com/bots/492873992982757406/widget" 
+				alt="Savage Cabbage stats on Discord Bot List">
+		</a>
 
 		<h1 id="cmds">Commands</h1>
 		<!--<p>The different command types are: <b>", ".join(command_info.keys())</b> and thier various commands inclue;</p>-->
